--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-  margin: none;
+  font-family: "Poppins", sans-serif;
 }
+
 .orange-color-text {
   color: #ffad5a;
 }
@@ -11,14 +12,15 @@ body {
 
   background-image: linear-gradient(45deg, lightsalmon, tomato);
 }
-.profile-pic {
+.pic {
   width: 50%;
 }
-.profile-pic img {
+.pic img {
   width: 40%;
 }
 .main-section {
   display: flex;
+  margin: 5%;
 }
 .stay-focused {
   width: 50%;
@@ -31,23 +33,54 @@ body {
 }
 
 .illustrator {
-  width: 10%;
+  width: 25%;
 }
 .mission-section {
   display: flex;
+  margin: 5%;
 }
 .mission-iteams {
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 30px;
 
   margin-left: 30px;
+  text-align: justify;
 }
 .mission-bg {
-  background-color: rgba(25, 200, 219, 0.1);
+  background-color: rgba(23, 192, 211, 0.418);
 }
 .vission-bg {
   background-color: rgba(255, 89, 89, 0.1);
 }
 .goal-bg {
   background-color: rgba(255, 244, 214, 1);
+}
+/* blog-section */
+
+.blog {
+  display: flex;
+  padding: 5%;
+  text-align: justify;
+}
+.blog img {
+  width: 350px;
+  padding-right: 40px;
+}
+.blog-text {
+  width: 20%;
+}
+.blog-text-2 {
+  width: 30%;
+  padding-right: 30px;
+}
+footer {
+  text-align: center;
+  margin-top: 7rem;
+  background-color: black;
+}
+.mission-color {
+  color: white;
+}
+.fotter-text {
+  color: rgba(217, 219, 225, 1);
 }
