--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body {
   background-image: linear-gradient(45deg, lightsalmon, tomato);
 }
 .pic {
-  width: 50%;
+  width: 40%;
 }
 .pic img {
   width: 40%;
+  padding-left: 50px;
 }
 .main-section {
   display: flex;
